--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@
 #   git config --global core.excludesfile '~/.gitignore_global'
 
 # Ignore RubyMine / IDEA project files
-
+#fty
 
 # Ignore bundler config.
 /.bundle
